<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/pill_editor_image_view"
        android:layout_width="216dp"
        android:layout_height="216dp"
        android:layout_gravity="center"
        android:src="@drawable/capsule_blue" />

    <!-- Colour selector -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:text="@string/colour_text_field"
            tools:textSize="16sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/colour_spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Name field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingRight="32dp"
            android:text="@string/name_text_field"
            tools:textSize="16sp"/>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:inputType="textCapWords"
            android:hint="@string/name_edit_text_hint" />

    </LinearLayout>

    <!-- Time selector -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:text="@string/time_text_field"
            tools:textSize="16sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/time_spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>