<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.helou.james.pillminder.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/time_segment_headers"
        android:text="@string/morning"
        android:background="@color/morningHeader"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/morning_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="horizontal"
            android:background="@color/morningBg"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/time_segment_headers"
            android:text="@string/afternoon"
            android:background="@color/afternoonHeader"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/afternoon_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="horizontal"
            android:background="@color/afternoonBg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/time_segment_headers"
            android:text="@string/evening"
            android:background="@color/eveningHeader"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/evening_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="horizontal"
            android:background="@color/eveningBg"/>
    </LinearLayout>



</LinearLayout>
